RESOLVED FIXED142787
REGRESSION (r181423): Crash @ generatedcontent.org at com.apple.WebCore: WebCore::MediaPlayer::maximumDurationToCacheMediaTime const + 4
https://bugs.webkit.org/show_bug.cgi?id=142787
Summary REGRESSION (r181423): Crash @ generatedcontent.org at com.apple.WebCore: WebC...
Jer Noble
Reported 2015-03-17 12:07:15 PDT
REGRESSION (r181423): Crash @ generatedcontent.org at com.apple.WebCore: WebCore::MediaPlayer::maximumDurationToCacheMediaTime const + 4
Attachments
Patch (1.36 KB, patch)
2015-03-17 12:10 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2015-03-17 12:09:35 PDT
Jer Noble
Comment 2 2015-03-17 12:10:48 PDT
WebKit Commit Bot
Comment 3 2015-03-17 13:29:09 PDT
Comment on attachment 248857 [details] Patch Clearing flags on attachment: 248857 Committed r181662: <http://trac.webkit.org/changeset/181662>
WebKit Commit Bot
Comment 4 2015-03-17 13:29:13 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.