REGRESSION (r181423): Crash @ generatedcontent.org at com.apple.WebCore: WebCore::MediaPlayer::maximumDurationToCacheMediaTime const + 4 https://bugs.webkit.org/show_bug.cgi?id=142787

Reviewed by Eric Carlson.

Null check m_player before derefencing.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::parseAttribute):


Canonical link: https://commits.webkit.org/160817@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181662 268f45cc-cd09-0410-ab3c-d52691b4dbfc